AP-292 - Fixed upload extensions pop up not showing up, also adjusted minor CSS issues.

--- a/src/Modules/Settings/Dnn.PersonaBar.Extensions/Extensions.Web/src/components/InstallExtensionModal/FileUpload/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.Extensions/Extensions.Web/src/components/InstallExtensionModal/FileUpload/style.less
@@ -139,10 +139,11 @@
                     right: -100px;
                     opacity: 0;
                     cursor: pointer;
+                    min-height: 200px;
                 }
                 svg {
-                    width: 100%;
-                    height: 100%;
+                    width: 32px;
+                    height: 32px;
                 }
                 &:first-of-type {
                     margin-left: 0px;
@@ -335,6 +336,8 @@
             svg {
                 margin-top: 8px;
                 margin-bottom: 3px;
+                width: 42px;
+                height: 42px;
             }
         }
         h4 {
